[gd_scene load_steps=25 format=3 uid="uid://dofqw67b6mgvx"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_yhf07"]
[ext_resource type="Texture2D" uid="uid://di0yskydh6881" path="res://assets/HOTLINE MIAMI STOLEN ASSETS/characters/PigLegs.png" id="1_yvhfw"]
[ext_resource type="PackedScene" uid="uid://bkpwht0w408q0" path="res://scenes/tracer_bullet.tscn" id="2_npqes"]
[ext_resource type="Texture2D" uid="uid://b4msm4kumldgw" path="res://assets/HOTLINE MIAMI STOLEN ASSETS/characters/PigGunShoot.png" id="2_ob66f"]
[ext_resource type="PackedScene" uid="uid://bvxgviqmpclye" path="res://scenes/gun_smoke_sprite.tscn" id="3_3ttji"]
[ext_resource type="Texture2D" uid="uid://c8hlr8fvdkpyf" path="res://assets/HOTLINE MIAMI STOLEN ASSETS/characters/PigGunWalk.png" id="3_dr5pe"]
[ext_resource type="PackedScene" uid="uid://butyyver2kyta" path="res://scenes/enemy scenes/on_hit_blood_animation.tscn" id="4_fykuq"]
[ext_resource type="PackedScene" uid="uid://dt0p77sbspowv" path="res://scenes/wall_collision_animation.tscn" id="5_gvmi5"]
[ext_resource type="Script" path="res://scripts/PlayerCamera.gd" id="6_4cn7m"]
[ext_resource type="Texture2D" uid="uid://dmfiw1jwdhl6" path="res://assets/HOTLINE MIAMI STOLEN ASSETS/muzzle flash/pngtree-simple-muzzle-flash-vector-png-png-image_5797978.png" id="6_olv6l"]
[ext_resource type="Texture2D" uid="uid://4e7k767ca4so" path="res://assets/HOTLINE MIAMI STOLEN ASSETS/gradients/Circular 7 - 128x128.png" id="8_fcrwt"]
[ext_resource type="AudioStream" uid="uid://crkdkbklkj72t" path="res://assets/HOTLINE MIAMI STOLEN ASSETS/SOUNDS/player sounds/clean-machine-gun-burst-98224.mp3" id="8_sbgei"]
[ext_resource type="Texture2D" uid="uid://cofpiion5u0w8" path="res://assets/HOTLINE MIAMI STOLEN ASSETS/gradients/Circular 5 - 128x128.png" id="9_mqb5y"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i2a2h"]
radius = 7.0
height = 24.0

[sub_resource type="Animation" id="Animation_0u2ex"]
length = 0.001

[sub_resource type="Animation" id="Animation_4mo80"]
resource_name = "idle"
length = 1.00001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LegSpriteStrip:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1sc8o"]
resource_name = "walking"
length = 1.00001
loop_mode = 1
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LegSpriteStrip:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875, 0.25, 0.3125, 0.375, 0.4375, 0.5, 0.5625, 0.625, 0.6875, 0.75, 0.8125, 0.875, 0.9375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ei6e7"]
_data = {
"RESET": SubResource("Animation_0u2ex"),
"idle": SubResource("Animation_4mo80"),
"walking": SubResource("Animation_1sc8o")
}

[sub_resource type="Animation" id="Animation_1ibdp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyWalkSpriteStrip:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyShootSpriteStrip:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_yfvsb"]
resource_name = "idle"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyWalkSpriteStrip:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyWalkSpriteStrip:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyShootSpriteStrip:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyWalkSpriteStrip:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g28d2"]
resource_name = "shooting"
length = 0.250012
loop_mode = 1
step = 0.0625
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0625, 0.125, 0.1875),
"transitions": PackedFloat32Array(1, 1.07177, 1, 1.07177),
"update": 1,
"values": [true, false, true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyWalkSpriteStrip:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyShootSpriteStrip:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyShootSpriteStrip:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(14, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyShootSpriteStrip:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.125),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 2]
}

[sub_resource type="Animation" id="Animation_epu7y"]
resource_name = "walking"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyWalkSpriteStrip:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyWalkSpriteStrip:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MuzzleFlash:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyShootSpriteStrip:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyWalkSpriteStrip:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v4i1l"]
_data = {
"RESET": SubResource("Animation_1ibdp"),
"idle": SubResource("Animation_yfvsb"),
"shooting": SubResource("Animation_g28d2"),
"walking": SubResource("Animation_epu7y")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_an3xf"]
radius = 29.0172

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 17
script = ExtResource("1_yhf07")
tracer_bullet_scene = ExtResource("2_npqes")
gun_smoke_sprite_scene = ExtResource("3_3ttji")
Enemy_on_hit_blood_animation = ExtResource("4_fykuq")
obstacle_on_hit_animation = ExtResource("5_gvmi5")
direction = Vector2(0, -1)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
z_index = -3
offset_left = -187.0
offset_top = -145.0
offset_right = 301.0
offset_bottom = 164.0
color = Color(0.733333, 0.733333, 0.733333, 1)

[node name="LegSpriteStrip" type="Sprite2D" parent="."]
texture = ExtResource("1_yvhfw")
hframes = 16
frame = 3

[node name="BodyWalkSpriteStrip" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_dr5pe")
hframes = 8

[node name="BodyShootSpriteStrip" type="Sprite2D" parent="."]
position = Vector2(14, 0)
texture = ExtResource("2_ob66f")
hframes = 4
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_i2a2h")

[node name="LegAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ei6e7")
}

[node name="BodyAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v4i1l")
}

[node name="PlayerCamera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
script = ExtResource("6_4cn7m")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(11, 6)
target_position = Vector2(8000, 0)
collision_mask = 5

[node name="FiringSpeedTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="MuzzleFlash" type="Sprite2D" parent="."]
visible = false
position = Vector2(37, 7)
scale = Vector2(0.119444, 0.105556)
texture = ExtResource("6_olv6l")

[node name="MuzzleFlashLight" type="PointLight2D" parent="MuzzleFlash"]
position = Vector2(-280, -10)
rotation = 1.5708
scale = Vector2(1.53845, 2.92894)
color = Color(1, 0.992157, 0.709804, 1)
energy = 0.5
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 3.0
texture = ExtResource("8_fcrwt")
offset = Vector2(0, -390)
texture_scale = 5.0

[node name="MuzzleFlashShadow" type="PointLight2D" parent="MuzzleFlash"]
position = Vector2(-330, -20)
rotation = 1.5708
scale = Vector2(3, 3)
energy = 0.5
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 3.0
texture = ExtResource("8_fcrwt")
offset = Vector2(0, -220)
texture_scale = 2.5

[node name="MuzzleFlashShadow2" type="PointLight2D" parent="MuzzleFlash"]
visible = false
position = Vector2(-330, -20)
rotation = 1.5708
scale = Vector2(3, 3)
energy = 0.5
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 3.0
texture = ExtResource("9_mqb5y")
offset = Vector2(0, -100)
texture_scale = 2.5

[node name="MachineGunShoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_sbgei")
bus = &"SFX"

[node name="ExecutionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExecutionArea"]
shape = SubResource("CircleShape2D_an3xf")

[connection signal="timeout" from="FiringSpeedTimer" to="." method="_on_firing_speed_timer_timeout"]
[connection signal="area_entered" from="ExecutionArea" to="." method="_on_execution_area_area_entered"]
[connection signal="area_exited" from="ExecutionArea" to="." method="_on_execution_area_area_exited"]
